refactor: исправлены методы на удаления в sqlchatrepository